fix(chip-set): MDC update
- textbox for adding new chips in input chip-set looks bad
- pressing the remove button on a chip does not remove the chip
- fixed floating label styles
- prevent chip-set from entering edit-mode while disabled or readonly

--- a/src/components/chip-set/chip-set.scss
+++ b/src/components/chip-set/chip-set.scss
@@ -6,7 +6,12 @@
 @use '../../style/internal/lime-theme';
 
 @use '@material/textfield';
-@use '@material/chips';
+@use "@material/textfield/icon";
+@use "@material/notched-outline/mdc-notched-outline";
+@use "@material/floating-label";
+@use "@material/floating-label/mdc-floating-label";
+@use '@material/ripple';
+@use '@material/chips/deprecated/mdc-chips';
 
 /**
  * @prop --icon-background-color: Background color of the icon. Defaults to transparent.
@@ -15,6 +20,16 @@
  * @prop --background-color-disabled: Background color of the field when type is set to input and the component is disabled or readonly.
  * @prop --input-chip-set-selected-chip-color: Color of the highlight around selected chips in input chip-sets.
  */
+
+@include textfield.core-styles;
+@include icon.icon-core-styles;
+
+@include shared_input-select-picker.outlined-style-overrides;
+@include shared_input-select-picker.floating-label-overrides;
+@include shared_input-select-picker.disabled-overrides;
+@include shared_input-select-picker.readonly-overrides;
+@include shared_input-select-picker.leading-icon;
+
 $height-of-chip-set-input: functions.pxToRem(36);
 
 .mdc-chip {
@@ -93,6 +108,11 @@ limel-badge {
     padding: 0 functions.pxToRem(12) 0 functions.pxToRem(4);
     color: inherit;
     text-decoration: none;
+
+    &:focus,
+    &:focus-visible {
+        outline: none;
+    }
 }
 
 limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
@@ -160,12 +180,6 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
     }
 }
 
-@include shared_input-select-picker.outlined-style-overrides;
-@include shared_input-select-picker.floating-label-overrides;
-@include shared_input-select-picker.disabled-overrides;
-@include shared_input-select-picker.readonly-overrides;
-@include shared_input-select-picker.leading-icon;
-
 .mdc-text-field {
     height: auto;
     cursor: text;
@@ -199,27 +213,28 @@ limel-icon.mdc-chip__icon.mdc-chip__icon--leading {
     }
 }
 
-.mdc-floating-label {
-    @include shared_input-select-picker.looks-like-input-label;
-    &.mdc-text-field--required::after {
-        content: '*';
-    }
-    &.lime-floating-label--float-above,
-    &.lime-floating-label--float-above.mdc-floating-label--float-above {
-        @include shared_input-select-picker.label--float-above;
-        top: shared_input-select-picker.$floating-label-top-value;
-    }
-}
-
+// used only in chipsets that do not have input
 .chip-set__label {
-    @include shared_input-select-picker.looks-like-input-label;
+    top: functions.pxToRem(13);
     padding-left: functions.pxToRem(20);
-    font-size: functions.pxToRem(16);
 }
 
+// Because MDC removes some classes in chipset, we add custom
+// classes with similar names and expected behavior & styles.
+// These class names start with `lime-`, instead of `mdc-`.
 .lime-notched-outline--notched {
     .mdc-notched-outline__notch {
         border-top: 1px solid transparent !important;
+
+        .lime-floating-label--float-above {
+            // This overrides MDC's original top value which is `top: 50%`.
+            // The reason is that a % value aligns the label in a wrong position
+            // vertically, when there are multiple rows of chips.
+            top: functions.pxToRem(27);
+
+            transform: translateY(-34.75px) scale(0.75);
+            font-size: shared_input-select-picker.$cropped-label-hack--font-size;
+        }
     }
 }
 
